[gd_scene load_steps=4 format=3 uid="uid://ci0ihc8o740fp"]

[ext_resource type="Script" path="res://achievementiks.gd" id="1_stpc6"]
[ext_resource type="FontFile" uid="uid://bsqmnvt4wifwp" path="res://Ldfcomicsans-jj7l.ttf" id="1_un4ex"]
[ext_resource type="AudioStream" uid="uid://oep1yjhjspd5" path="res://Meatball Parade_01.mp3" id="2_pdwv6"]

[node name="Achievements" type="Node2D"]
script = ExtResource("1_stpc6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_un4ex")
theme_override_font_sizes/font_size = 64
text = "Achievemenetas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 76.0
offset_right = -576.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_un4ex")
theme_override_font_sizes/font_size = 32
text = "Achievemenetas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 576.0
offset_top = 76.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_un4ex")
theme_override_font_sizes/font_size = 32
text = "Achievemenetas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = 208.0
offset_right = 186.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to the menu"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.5
offset_top = -110.0
offset_right = 177.5
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScrollContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pdwv6")
volume_db = -3.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
